alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_5.snap
---
source: alpm-types/src/url.rs
---
error: invalid svn revision type
 | 
 | svn+https://example/project#branch=feature
 | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^ expected revision keyword
 | 
 = while parsing:
   source url: (svn+https://example/…)
   → invalid svn revision type
   → expected revision keyword
